cmake_minimum_required(VERSION 2.8)
project( ResultColorTest )
#find_package( WiringPi REQUIRED)

find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
#include_directories( ${WIRINGPI_INCLUDE_DIRS})
add_executable( ResultColorTest ResultColorTest.cpp )
target_link_libraries( ResultColorTest ${OpenCV_LIBS} )
target_link_libraries( ResultColorTest wiringPi)
target_link_libraries( ResultColorTest pthread)
